[package]
name = "containerd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
tonic = "0.6.1"
tower = "0.4.10"

[dev-dependencies]
tokio = {version = "1.13.0", features = ["full"]}

[build-dependencies]
prost-build = "0.9.0"
tonic-build = "0.6.0"
